# milkshake-terminal

./: Cargo.toml
.cargo/: config.toml
.github/workflows/: build-android.yml  build.yml
gradle/wrapper/: gradle-wrapper.properties
src/: config.rs  convert.rs  lib.rs  pseudo_terminal.rs  vte.rs
