[package]
name = "milkshake-terminal"
version = "0.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
compact_str = { version = "0.8.0", default-features = false }
crossbeam-channel = { version = "0.5.13", default-features = false }
fontdb = { version = "0.16.2", default-features = false, features = ["fs"] }
libc = { version = "0.2.161", default-features = false }
rustix-openpty = { version = "0.1.1", default-features = false }
vte = { version = "0.13.0", default-features = false }
serde = { version = "1.0.215", features = ["derive"] }
toml = "0.8.19"
thiserror = "2.0.3"
dirs = "5.0.1"

[dependencies.bevy]
version = "0.15.0-rc.2"
default-features = false
features = [
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_pbr",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "multi_threaded",
    "tonemapping_luts",
    "wayland",
    "default_font",
]

[dependencies.image]
version = "0.25.4"
default-features = false
features = ["jpeg", "png"]

[dependencies.rustix]
version = "0.38.37"
default-features = false
features = ["libc", "process", "std"]

[profile.dev]
opt-level = 2
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3
