[package]
name = "milkshake-terminal"
version = "0.0.0"
edition = "2024"
rust-version = "1.93"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
base64 = { version = "0.22.1", default-features = false, features = ["std"] }
compact_str = { version = "0.9.0", default-features = false }
crossbeam-channel = { version = "0.5.15", default-features = false }
fontdb = { version = "0.23.0", default-features = false, features = ["fs"] }
libc = { version = "0.2.182", default-features = false }
rustix-openpty = { version = "0.2.0", default-features = false }
vte = { version = "0.15.0", default-features = false }

[dependencies.bevy]
version = "0.18.0"
default-features = false
features = [
    "android-game-activity",
    "android_shared_stdcxx",
    "bevy_asset",
    "bevy_pbr",
    "bevy_log",
    "bevy_text",
    "bevy_ui",
    "bevy_winit",
    "bevy_render",
    "bevy_ui_render",
    "multi_threaded",
    "tonemapping_luts",
    "default_font",
    "zstd_rust",
]

[dependencies.image]
version = "0.25.9"
default-features = false
features = ["jpeg", "png"]

[dependencies.rustix]
version = "1.1.3"
default-features = false
features = ["libc", "process", "std", "termios"]

[profile.dev]
opt-level = 2
strip = "symbols"

[profile.dev.package."*"]
opt-level = 3

[features]
default = ["wayland"]
dynamic_linking = ["bevy/dynamic_linking"]
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[lints.clippy]
too_many_arguments = { level = "allow"}
